public/lite/api/en/r1.6/_sources/generate/program_listing_file_include_core_ops_base_operator.h.rst.txt
:gitee_url: https://gitee.com/mindspore/docs


.. _program_listing_file_include_core_ops_base_operator.h:

Program Listing for File base_operator.h
========================================

|exhale_lsh| :ref:`Return to documentation for file <file_include_core_ops_base_operator.h>` (``include/core/ops/base_operator.h``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS

.. code-block:: cpp

   
   #ifndef MINDSPORE_CORE_OPS_BASE_OPERATOR_
   #define MINDSPORE_CORE_OPS_BASE_OPERATOR_
   
   #include <string>
   #include <memory>
   #include <vector>
   
   #include "mindapi/ir/primitive.h"
   
   namespace abstract {
   class AnalysisEngine;
   using AnalysisEnginePtr = std::shared_ptr<AnalysisEngine>;
   
   class AbstractBase;
   using AbstractBasePtr = std::shared_ptr<abstract::AbstractBase>;
   }  // namespace abstract
   
   namespace mindspore {
   namespace ops {
   class BaseOperator : public api::Primitive {
    public:
     explicit BaseOperator(const std::string &name);
     ~BaseOperator() = default;
   
    protected:
     void InitIOName(const std::vector<std::string> &inputs_name, const std::vector<std::string> &outputs_name);
   };
   }  // namespace ops
   }  // namespace mindspore
   
   #endif  // MINDSPORE_CORE_OPS_BASE_OPERATOR_
